--- a/.gitignore
+++ b/.gitignore
@@ -6,10 +6,10 @@
 xcuserdata/
 
 ## API keys
-#/Flash-Chat/Keys.plist
+#/PROJECT_NAME/Keys.plist
 
 ## Google Service Plist
-/GoogleService-Info.plist
+#/GoogleService-Info.plist
 
 
 ## compatibility with Xcode 8 and earlier (ignoring not required starting Xcode 9)
